
    BI:
    * 4002 BI: Major Rework of Code. Apache processes now share computated data...
    * 3991 FIX: BI Aggregations: no longer show duplicate aggregations when an aggregation has mulitple groups

    Event Console:
    * 4132 Monitoring notifications: Add EC_ORIG_HOST to notifiation context...
    * 4148 EC: reorder entries in Performance snapin, add overflows and load
    * 4151 Use notification fallback also for hosts not known to the monitoring...
    * 4097 FIX: Event console: Make writing of status file more robust...
    * 4147 FIX: Always show rule analyser result on Generate, not only after previous Try out...
    * 4149 FIX: Fix notifications from Event Console if host has more than one contact...
    * 4152 FIX: Fix matching of hosts when forwarding notifications from Event Console...

    Livestatus:
    * 3651 FIX: Fixed potential segfault with Nagios core when accessing log/commands table via Livestatus....

    HW/SW-Inventory:
    * 3916 FIX: History view: Only showing removed/added entries tables when there are entries
    * 4066 FIX: Fixed broken titles of nodes in inventory views
    * 4067 FIX: Fixed broken inventory history view in current master...
    * 3917 FIX: Fixed broken dicttable rendering
    * 3918 FIX: Inventory history: Fixed possible exception when renedering history tables...
    * 4073 FIX: Cleaned up cluster host handling in HW/SW inventory...


1.4.0i2:
    Core & Setup:
    * 4036 Measurement of time used by Check_MK now includes time waited for agent...
    * 3648 FIX: Fixed log file parsing of host states...
    * 3965 FIX: Nagios: Improved handling of broken core config...

    Checks & Agents:
    * 3841 cups_queues: thresholds are now configurable in WATO...
    * 3910 oracle_instance: noarchivelog can now be ignored
    * 3911 if.include: each operational state can now be mapped to a check state
    * 3912 elphase.include: now device states can be mapped to monitoring states